force-app/main/default/objects/Lead/fields/Access_for_Installation_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Access_for_Installation_Equipment__c</fullName>
    <label>Access for Installation Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>