force-app/main/default/objects/Lead/fields/Available_Slots__c.field-meta.xml
<CustomField>
    <fullName>Available_Slots__c</fullName>
    <label>Available Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>