force-app/main/default/objects/Lead/fields/Average_Monthly_Energy_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Energy_Consumption__c</fullName>
    <label>Average Monthly Energy Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>