force-app/main/default/objects/Lead/fields/Breaker_Sizes__c.field-meta.xml
<CustomField>
    <fullName>Breaker_Sizes__c</fullName>
    <label>Breaker Sizes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>