force-app/main/default/objects/Lead/fields/Budget_for_Solar_Installation__c.field-meta.xml
<CustomField>
    <fullName>Budget_for_Solar_Installation__c</fullName>
    <label>Budget for Solar Installation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>