force-app/main/default/objects/Lead/fields/Current_Utility_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Utility_Provider__c</fullName>
    <label>Current Utility Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>