force-app/main/default/objects/Lead/fields/Desired_Energy_Offset__c.field-meta.xml
<CustomField>
    <fullName>Desired_Energy_Offset__c</fullName>
    <label>Desired Energy Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>