force-app/main/default/objects/Lead/fields/Existing_Renewable_Energy_Systems__c.field-meta.xml
<CustomField>
    <fullName>Existing_Renewable_Energy_Systems__c</fullName>
    <label>Existing Renewable Energy Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solar Panels</fullName>
            </value>
            <value>
                <fullName>Wind Turbines</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>