force-app/main/default/objects/Lead/fields/Expected_Changes_in_Energy_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Expected_Changes_in_Energy_Consumption__c</fullName>
    <label>Expected Changes in Energy Consumption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>