force-app/main/default/objects/Lead/fields/Homeowners_Association_HOA_Rules__c.field-meta.xml
<CustomField>
    <fullName>Homeowners_Association_HOA_Rules__c</fullName>
    <label>Homeowners Association (HOA) Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>