force-app/main/default/objects/Lead/fields/Interest_in_Battery_Storage__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_Battery_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest in Battery Storage</label>
    <type>Checkbox</type>
</CustomField>