force-app/main/default/objects/Lead/fields/Investment_Budget__c.field-meta.xml
<CustomField>
    <fullName>Investment_Budget__c</fullName>
    <label>Investment Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>