force-app/main/default/objects/Lead/fields/Local_Zoning_and_Building_Codes__c.field-meta.xml
<CustomField>
    <fullName>Local_Zoning_and_Building_Codes__c</fullName>
    <label>Local Zoning and Building Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>