force-app/main/default/objects/Lead/fields/Main_Service_Panel_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Main_Service_Panel_Capacity__c</fullName>
    <label>Main Service Panel Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>