force-app/main/default/objects/Lead/fields/Monthly_Energy_Offset__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Energy_Offset__c</fullName>
    <formula>(Desired_Energy_Offset__c  *  Average_Monthly_Energy_Consumption__c)  / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Energy Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>