force-app/main/default/objects/Lead/fields/Parking_Availability_for_Installation__c.field-meta.xml
<CustomField>
    <fullName>Parking_Availability_for_Installation__c</fullName>
    <label>Parking Availability for Installation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>