force-app/main/default/objects/Lead/fields/Peak_Energy_Usage_Times__c.field-meta.xml
<CustomField>
    <fullName>Peak_Energy_Usage_Times__c</fullName>
    <label>Peak Energy Usage Times</label>
    <type>Time</type>
</CustomField>