force-app/main/default/objects/Lead/fields/Planned_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Planned_Purchases__c</fullName>
    <label>Planned Purchases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>