force-app/main/default/objects/Lead/fields/Preferred_Financing_Options__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Financing_Options__c</fullName>
    <label>Preferred Financing Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>