force-app/main/default/objects/Lead/fields/Recent_or_Planned_Renovations__c.field-meta.xml
<CustomField>
    <fullName>Recent_or_Planned_Renovations__c</fullName>
    <label>Recent or Planned Renovations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>