force-app/main/default/objects/Lead/fields/Required_Permits_and_Approval_Processes__c.field-meta.xml
<CustomField>
    <fullName>Required_Permits_and_Approval_Processes__c</fullName>
    <label>Required Permits and Approval Processes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>