force-app/main/default/objects/Lead/fields/Roof_Age__c.field-meta.xml
<CustomField>
    <fullName>Roof_Age__c</fullName>
    <label>Roof Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>