force-app/main/default/objects/Lead/fields/Roof_Length__c.field-meta.xml
<CustomField>
    <fullName>Roof_Length__c</fullName>
    <label>Roof Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>