force-app/main/default/objects/Lead/fields/Roof_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Roof_Orientation__c</fullName>
    <label>Roof Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North-facing</fullName>
            </value>
            <value>
                <fullName>South-facing</fullName>
            </value>
            <value>
                <fullName>East-facing</fullName>
            </value>
            <value>
                <fullName>West-facing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>