force-app/main/default/objects/Lead/fields/Roof_Slope__c.field-meta.xml
<CustomField>
    <fullName>Roof_Slope__c</fullName>
    <label>Roof Slope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Low Slope</fullName>
            </value>
            <value>
                <fullName>Medium Slope</fullName>
            </value>
            <value>
                <fullName>Steep Slope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>