force-app/main/default/objects/Lead/fields/Roof_Width__c.field-meta.xml
<CustomField>
    <fullName>Roof_Width__c</fullName>
    <label>Roof Width</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>