force-app/main/default/objects/Lead/fields/Shading_Information__c.field-meta.xml
<CustomField>
    <fullName>Shading_Information__c</fullName>
    <label>Shading Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trees</fullName>
            </value>
            <value>
                <fullName>Chimneys</fullName>
            </value>
            <value>
                <fullName>Nearby Buildings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>