force-app/main/default/objects/Lead/fields/Structural_Integrity__c.field-meta.xml
<CustomField>
    <fullName>Structural_Integrity__c</fullName>
    <label>Structural Integrity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>