force-app/main/default/objects/Lead/fields/Timeframe_for_Installation__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_for_Installation__c</fullName>
    <label>Timeframe for Installation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>1-3 Months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>