force-app/main/default/objects/Lead/fields/Total_Roof_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Roof_Area__c</fullName>
    <formula>Roof_Length__c  *  Roof_Width__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Roof Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>