force-app/main/default/objects/Lead/fields/Type_of_Roof__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Roof__c</fullName>
    <label>Type of Roof</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asphalt Shingles</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>