force-app/main/default/objects/Lead/fields/Usable_Roof_Area_for_Solar_Panels__c.field-meta.xml
<CustomField>
    <fullName>Usable_Roof_Area_for_Solar_Panels__c</fullName>
    <formula>Usable_Roof_Length_for_Solar_Panels__c  *  Usable_Roof_Width_for_Solar_Panels__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usable Roof Area for Solar Panels</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>