force-app/main/default/objects/Lead/fields/Usable_Roof_Length_for_Solar_Panels__c.field-meta.xml
<CustomField>
    <fullName>Usable_Roof_Length_for_Solar_Panels__c</fullName>
    <label>Usable Roof Length for Solar Panels</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>